--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,15 +23,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  flutter_cupertino_localizations: ^1.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  intl_translation: ^0.17.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
